# University-Management-System-OOP

./: CMakeLists.txt  README.md  exemplu.txt  header.h  main.cpp
include/: AbstractStudent.h  Examen.h  Exception.h  Ipersoana.h  MaterieAn1.h  Profesor.h  StudentAn1.h  StudentAn2.h
src/: AbstractStudent.cpp  CMakeLists.txt  Examen.cpp  Exception.cpp  MaterieAn1.cpp  Profesor.cpp  StudentAn1.cpp  StudentAn2.cpp
